Update to 1.18.2 plus a bunch of stuff